--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^4.10.1"
+		"@lucia-auth/adapter-prisma": "^0.4.0",
+		"@lucia-auth/sveltekit": "^0.6.3",
+		"@prisma/client": "^4.10.1",
+		"lucia-auth": "^0.6.0"
 	}
 }
