--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@lucia-auth/adapter-prisma": "^0.4.0",
 		"@lucia-auth/sveltekit": "^0.6.3",
 		"@prisma/client": "^4.10.1",
+		"date-fns": "^2.29.3",
 		"lucia-auth": "^0.6.0"
 	}
 }
