--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@lucia-auth/adapter-prisma": "^0.4.0",
 		"@lucia-auth/sveltekit": "^0.6.10",
 		"@prisma/client": "^4.11.0",
+		"@types/node": "^18.15.0",
 		"date-fns": "^2.29.3",
 		"lucia-auth": "^0.6.2",
 		"svelte-markdown": "^0.2.3",
